# Drago2D

./: .gitignore  Makefile  README.md  drago2d.hpp
deprecated/: LICENSE  README.md
deprecated/Drago2D/: CMakeLists.txt  Drago2D.hpp  configure.sh
deprecated/Drago2D/Shaders/: Basic.fs.glsl  Basic.vs.glsl  Transform.vs.glsl
deprecated/Drago2D/include/: Application.hpp  ApplicationEvent.hpp  Core.hpp  Core.hpp.in  Draw.hpp  EntryPoint.hpp  Event.hpp  IBO.hpp  KeyCodes.hpp  KeyEvent.hpp  Log.hpp  Mesh.hpp  MouseEvent.hpp  Renderer.hpp  Renderer.hpp.in  Shader.hpp  Transform.hpp  VAO.hpp  VBO.hpp  Window.hpp  d2dpch.h  d2dpch.h.in
deprecated/Drago2D/src/: Application.cpp  Draw.cpp  IBO.cpp  Log.cpp  Mesh.cpp  Shader.cpp  Transform.cpp  VAO.cpp  VBO.cpp  Window.cpp
deprecated/Sandbox/: CMakeLists.txt  configure.sh  main.cpp
include/: drago2d.hpp
include/glad/: glad.h
sandbox/: Makefile  d2d.cpp  main.cpp
